@@ -30,6 +30,7 @@
 - Fixed issue in projects about removing the existing comment when grading student's project
 - Fixed issue in notifications about an exception when a lesson/test is deleted
 - Added cart disable functionality, to allow for single click enrolling to free lessons and courses
+- Added ability to switch between display modes(iframe, popup) in editing scorm units
 
 === Version 3.6.4 build 7725 ===
 - Rearranged system settings menu for speed and tidyness
